--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -79,6 +79,32 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-11-15">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-11-15-node-share.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/610552e86a81521a4f6a2a8194cb9de6.webp" alt="「11月15日」最高速度19.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-11-15-node-share.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月15日」最高速度19.6M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、韩国、美国、香港、新加坡、加拿大、欧洲等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2024-11-14">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-11-14-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/050eeaeae15c4f80c45d1b2f1bf69e02.webp" alt="「11月14日」最高速度19.1M/S，2024年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-11-14-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月14日」最高速度19.1M/S，2024年V2ray/Shadowrocket/Clash/SSR每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、欧洲、日本、新加坡、韩国、香港、加拿大等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-11-13">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-11-13-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -183,32 +209,6 @@
                                     <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、日本、美国、香港、加拿大等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-11-05">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-11-5-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「11月5日」最高速度18M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-11-5-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月5日」最高速度18M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、美国、香港、欧洲等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-11-04">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-11-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/fc8c592510f04d04d9f99cdf3ce8408d.webp" alt="「11月4日」最高速度18.9M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-11-4-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「11月4日」最高速度18.9M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、日本、美国、香港、韩国等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -219,16 +219,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-11-18-free-high-speed-nodes.htm" title="「11月18日」最高速度18.6M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「11月18日」最高速度18.6M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-free-v2ray-subscribe.htm" title="「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-17-free-node-subscribe.htm" title="「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月17日」最高速度18M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-29-free-high-speed-nodes.htm" title="「9月29日」最高速度18.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「9月29日」最高速度18.4M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-24-node-share.htm" title="「9月24日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「9月24日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share.htm" title="「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「8月30日」最高速度21.8M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-8-free-v2ray-subscribe.htm" title="「11月8日」最高速度18.5M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「11月8日」最高速度18.5M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-4-free-high-speed-nodes.htm" title="「10月4日」最高速度22.3M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「10月4日」最高速度22.3M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-27-node-share-links.htm" title="「10月27日」最高速度19.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「10月27日」最高速度19.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-21-free-v2ray-subscribe.htm" title="「9月21日」最高速度18M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「9月21日」最高速度18M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-22-free-v2ray-subscribe.htm" title="「10月22日」最高速度19.7M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「10月22日」最高速度19.7M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-9-free-node-subscribe.htm" title="「10月9日」最高速度20.7M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「10月9日」最高速度20.7M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-14-free-node-subscribe.htm" title="「10月14日」最高速度21.2M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「10月14日」最高速度21.2M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-v2ray.htm" title="「10月12日」最高速度20.6M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「10月12日」最高速度20.6M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-22-free-node-subscribe.htm" title="「11月22日」最高速度18.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「11月22日」最高速度18.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-14-free-high-speed-nodes.htm" title="「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接">「8月14日」最高速度18M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-28-free-subscribe-node.htm" title="「9月28日」最高速度20.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月28日」最高速度20.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -240,7 +240,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
