--- a/free-nodes/page-8.htm
+++ b/free-nodes/page-8.htm
@@ -79,6 +79,32 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2024-09-16">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-9-16-node-share-links.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/556b5dbcfe6584f0352cb6fadde73408.webp" alt="「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-9-16-node-share-links.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月16日」最高速度21.2M/S，2024年Shadowrocket/SSR/V2ray/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了欧洲、香港、韩国、加拿大、美国、日本、新加坡等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2024-09-15">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2024-9-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/b9df39e5d5485e2cc4800be641032094.webp" alt="「9月15日」最高速度22M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2024-9-15-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月15日」最高速度22M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了新加坡、韩国、欧洲、加拿大、香港、美国、日本等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2024-09-14">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2024-9-14-free-v2ray.htm" class="xcblog-blog-url">
@@ -183,32 +209,6 @@
                                     <p>这一次的节点更新覆盖了香港、日本、欧洲、加拿大、新加坡、韩国、美国等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-09-06">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-9-6-free-v2ray.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「9月6日」最高速度22.6M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-9-6-free-v2ray.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月6日」最高速度22.6M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了美国、日本、加拿大、香港、欧洲、韩国、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2024-09-05">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2024-9-5-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「9月5日」最高速度19.4M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2024-9-5-free-node-subscribe.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「9月5日」最高速度19.4M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了韩国、新加坡、欧洲、加拿大、香港、美国、日本等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li><a href="/free-nodes/page-7.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-9.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -219,16 +219,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-9-21-free-v2ray-subscribe.htm" title="「9月21日」最高速度18M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接">「9月21日」最高速度18M/S，2024年Shadowrocket/Clash/V2ray/SSR每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-21-free-subscribe-node.htm" title="「11月21日」最高速度18.6M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「11月21日」最高速度18.6M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-27-free-node-subscribe.htm" title="「8月27日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接">「8月27日」最高速度20.5M/S，2024年V2ray/SSR/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-8-free-v2ray-subscribe.htm" title="「11月8日」最高速度18.5M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「11月8日」最高速度18.5M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-4-node-share.htm" title="「9月4日」最高速度19.4M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接">「9月4日」最高速度19.4M/S，2024年V2ray/Clash/Shadowrocket/SSR每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-v2ray-ss-ssr.htm" title="「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接">「10月11日」最高速度20.1M/S，2024年Shadowrocket/V2ray/SSR/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-13-free-node-subscribe.htm" title="「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接">「8月13日」最高速度21.3M/S，2024年SSR/Shadowrocket/V2ray/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-31-free-v2ray-subscribe.htm" title="「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接">「8月31日」最高速度21.6M/S，2024年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-11-free-node-subscribe-links.htm" title="「11月11日」最高速度20.4M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「11月11日」最高速度20.4M/S，2024年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-10-free-node-subscribe.htm" title="「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接">「8月10日」最高速度18.7M/S，2024年V2ray Node每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-2-free-node-subscribe.htm" title="「10月2日」最高速度20.6M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接">「10月2日」最高速度20.6M/S，2024年SSR/Clash/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-22-free-node-subscribe.htm" title="「11月22日」最高速度18.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「11月22日」最高速度18.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-10-free-node-subscribe-links.htm" title="「9月10日」最高速度20.6M/S，2024年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接">「9月10日」最高速度20.6M/S，2024年Clash/V2ray/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-6-free-v2ray.htm" title="「9月6日」最高速度22.6M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接">「9月6日」最高速度22.6M/S，2024年SSR/Clash/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-22-free-v2ray.htm" title="「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接">「8月22日」最高速度22.8M/S，2024年V2ray/Clash/SSR/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-28-free-subscribe-node.htm" title="「9月28日」最高速度20.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「9月28日」最高速度20.9M/S，2024年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-10-free-high-speed-nodes.htm" title="「11月10日」最高速度20M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接">「11月10日」最高速度20M/S，2024年Clash/SSR/V2ray/Shadowrocket每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-node-subscribe.htm" title="「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「8月15日」最高速度18M/S，2024年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-9-free-node-subscribe.htm" title="「10月9日」最高速度20.7M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接">「10月9日」最高速度20.7M/S，2024年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</a></li>
                     </ul>
     </div>
 </div>
@@ -240,7 +240,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
